--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1163,7 +1163,7 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 }
 
 .sheet-background-info .sheet-row-textarea textarea {
-    height: 100px;
+    height: 121px;
     margin: 0;
     padding: 2px 0 2px 2px;
 }
@@ -1175,12 +1175,12 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 
 .sheet-background-info .sheet-row-textarea-family,
 .sheet-background-info .sheet-row-textarea-family .sheet-cell {
-    height: 96px;
+    height: 128px;
     padding-right: 5px;
 }
 
 .sheet-background-info .sheet-row-textarea-family textarea {
-    height: 90px;
+    height: 122px;
     margin: 0;
     padding: 2px 0 2px 2px;
 }
@@ -1210,16 +1210,50 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 }
 
 .sheet-misc-notes .sheet-row-textarea .sheet-cell {
-    height: 318px;
+    height: 159px;
     padding: 4px 8px 4px 4px;
 }
 
 .sheet-misc-notes .sheet-row-textarea textarea {
-    height: 304px;
+    height: 145px;
     margin: 0;
     padding: 2px 0 2px 2px;
 }
 
+/* training Notes */
+
+.sheet-training-notes { 
+    width: 421px;
+}
+
+.sheet-training-notes .sheet-header {
+    background: #f0f0f0;
+    margin-bottom: 5px;
+}
+
+.sheet-training-notes .sheet-header .sheet-col0 { 
+    width: calc(100%);
+    text-align: center;
+}
+
+.sheet-training-notes .sheet-row .sheet-col0 { 
+    width: calc(100%);
+}
+
+.sheet-training-notes .sheet-row-textarea {
+    margin-top: 4px;
+}
+
+.sheet-training-notes .sheet-row-textarea .sheet-cell {
+    height: 159px;
+    padding: 4px 8px 4px 4px;
+}
+
+.sheet-training-notes .sheet-row-textarea textarea {
+    height: 145px;
+    margin: 0;
+    padding: 2px 0 2px 2px;
+}
 /* -- repeating controls -- */
 .repcontrol {
     margin-top: 4px;
