--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -648,6 +648,15 @@ input.sheet-tab0 + span {
     position: absolute;
 }
 
+.sheet-box .sheet-toggle ~ .sheet-checkbox-encumbrance {
+    position: inherit;
+    float: left;
+}
+
+.sheet-box input[type="checkbox"] ~ .sheet-checkbox-encumbrance:before {
+    line-height: 18px;
+}
+
 .sheet-box .sheet-toggle:checked ~ .sheet-checkbox:before {
     transform:rotate(90deg);
     -ms-transform:rotate(90deg); /* IE 9 */
@@ -933,6 +942,7 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 .sheet-lift .sheet-col1 { width: calc(100% - 180px); text-align: center; }
 
 .sheet-encumberance { width: calc(100% - 180px - 100px - 1.2em); }
+.sheet-encumberance .sheet-colToggle { position: relative;}
 .sheet-encumberance .sheet-col0 { width: 100px; }
 .sheet-encumberance .sheet-col1 { width: calc((100% - 100px) * 0.4); }
 .sheet-encumberance .sheet-colAll { width: calc((100% - 100px) * 0.166); }
@@ -953,6 +963,16 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 
 .sheet-options .sheet-collision-falling-options textarea {
     width: 184px;
+}
+
+/* show/hide table */
+/* show/hide manual unspent box */
+input.sheet-toggle-encumbrance[type="checkbox"]:checked ~ div.sheet-encumbrance-table-body {
+    display: block;
+}
+
+input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumbrance-table-body {
+    display: none;
 }
 
 /* -- TRAITS -- */
