Added Social Conflict Support

--- a/Mythras/Mythras.css
+++ b/Mythras/Mythras.css
@@ -754,6 +754,10 @@ input.sheet-affiliations-enabled-toggle:not(:checked) ~ div .sheet-affiliations-
     display: none;
 }
 
+input.sheet-social-conflict-enabled-toggle:not(:checked) ~ div .sheet-social-conflict-enabled {
+    display: none;
+}
+
 /* Sheet Types */
 input.sheet-type-toggle-battle-unit:not(:checked) ~ div.sheet-type-battle-unit,
 input.sheet-type-toggle-json:not(:checked) ~ div.sheet-type-json,
@@ -1360,6 +1364,65 @@ div.sheet-combatstyle-weapons {
 select.sheet-combatstyle-char {
     width: 7%;
 }
+
+/* Social Conflict */
+div.sheet-social-conflict {
+    margin-bottom: 5px;
+}
+div.sheet-social-conflict-skill-col {
+    width: 26%;
+    display: inline-block;
+    margin-right: 5px;
+}
+div.sheet-social-conflict-attribute-col {
+    width: 26%;
+    display: inline-block;
+    margin-right: 5px;
+}
+div.sheet-social-conflict-resolution-pool-col {
+    width: 45.5%;
+    display: inline-block;
+}
+div.sheet-social-attribute-row {
+    display: inline-block;
+    width: 91%;
+}
+div.sheet-social-attribute-label {
+    display: inline-block;
+    width: 50%;
+}
+div.sheet-social-attribute-number {
+    display: inline-block;
+    width: 23%;
+}
+div.sheet-resolution-pool-row {
+    display: inline-block;
+    width: 95%;
+}
+div.sheet-resolution-pool-label {
+    display: inline-block;
+    text-align: center;
+    width: 41%;
+}
+div.sheet-resolution-pool-number {
+    display: inline-block;
+    text-align: center;
+    width: 13%;
+}
+input[type="number"].sheet-resolution-pool-table-number {
+    text-align: center;
+    width: 20px;
+}
+div.sheet-resolution-pool-symbol {
+    text-align: center;
+    display: inline-block;
+}
+div.sheet-resolution-pool-total {
+    display: inline-block;
+    text-align: center;
+    width: 29%;
+}
+
 
 /* Armor */
 div.sheet-armor {
