GURPS] v1.6.1 Cosmetic and Fixes for gurps.html, gurps.css
Fixed wording from roll table to roll template. (Cosmetic Only)
Fixed Spell Macro roll to include Modifier, if any.
Fixed the Spell Effective Skill level to include the Spell MOD, if any
Fixed columns for MOD, Pts, Duration, and Maintains. (Cosmetic Only)
Reordered column layout to match GURPS Magic format. (Cosmetic Only)
Added attributes Class and Resisted By under Spells.
Fixed Spells ‘Based On’ header to show the attribute chosen. (Cosmetic Only)
Reduced the attribute size for Diff, MOD and Pts and increased size for Cost and Time. (Cosmetic Only)
Added attributes for Latest Changes date. (Cosmetic Only)
Added attributes College and Modifier Notes for Spells.
Updated Spell roll template with the new Class ad Resisted By attributes.
Added Attributes Misc and Modifier Notes for Skills.
Fixed Inventory totals for Value and Weight totals to show trailing zeros.
Fixed issue with Inventory Total Weight not rounding properly and not showing to 3 decimal places.
Made some format changes for Total Value and Total Weight under Inventory. (Cosmetic Only)

--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1250,6 +1250,15 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 .sheet-skills .sheet-col8 { width: 60px; }
 .sheet-skills .sheet-row-stats .sheet-col0 { margin-left: 48px; width: calc(100% - 376px); }
 
+.sheet-skills .sheet-row-misc .sheet-col0 { width: 75px; Text-align:right; font-size: 9px; height: 11px;}
+.sheet-skills .sheet-row-misc .sheet-col1 { width: 150px; }
+.sheet-skills .sheet-row-misc .sheet-col1 input { text-align:left; font-size: 9px; height: 11px;}
+.sheet-skills .sheet-row-misc .sheet-col2 { width: 175px; Text-align:right; font-size: 9px; height: 11px;}
+.sheet-skills .sheet-row-misc .sheet-col3 { width: 200px; }
+.sheet-skills .sheet-row-misc .sheet-col3 input { text-align:left; font-size: 9px; height: 11px;}
+
+.sheet-skills .sheet-row-misc .sheet-col0 { margin-left: 48px; width: calc(100% - 703px); }
+
 /* -- highlight row -- */
 .sheet-skills .repcontainer.ui-sortable.editmode .sheet-toggle-highlight {
     opacity: 0;
@@ -1522,20 +1531,20 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 .sheet-items .sheet-col0 { width: calc(100% - 0.4em); }
 
 .sheet-items { width: calc(100% - 0.4em); }
-.sheet-items .sheet-col0 { width: calc(100% - 380px); }
+.sheet-items .sheet-col0 { width: calc(100% - 400px); }
 .sheet-items .sheet-col0 input { text-align:left; }
 .sheet-items .sheet-col1 { width: 30px; }
 .sheet-items .sheet-col2 { width: 60px; }
 .sheet-items .sheet-col3 { width: 20px; }
 .sheet-items .sheet-col3 input { text-align:left; }
 .sheet-items .sheet-col4 { width: 50px; }
-.sheet-items .sheet-col5 { width: 50px; }
+.sheet-items .sheet-col5 { width: 60px; }
 .sheet-items .sheet-col5 input { text-align:right; }
 .sheet-items .sheet-col6 { width: 50px; }
 .sheet-items .sheet-col6 input { text-align:right; }
-.sheet-items .sheet-col7 { width: 50px; }
+.sheet-items .sheet-col7 { width: 60px; }
 .sheet-items .sheet-col8 { width: 50px; }
-.sheet-items .sheet-row-stats .sheet-col0 { margin-left: 48px; width: calc(100% - 429px); }
+.sheet-items .sheet-row-stats .sheet-col0 { margin-left: 48px; width: calc(100% - 449px); }
 .sheet-items .sheet-row-totals .sheet-col0 { width: calc(100% - 380px); }
 .sheet-items .sheet-row-totals .sheet-col1 { width: 100px; }
 .sheet-items .sheet-row-totals .sheet-col2 { width: 100px; }
@@ -1593,8 +1602,7 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 }
 
 .sheet-spells .sheet-header {
-    height: 30px;
-    padding: 5px;
+    padding: 3px;
 }
 
 /* -- highlight row -- */
@@ -1621,35 +1629,32 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
     background: #B7FFAA;    
 }
 
-.sheet-spells .sheet-col0 { width: calc(100% - 475px); }
-
+.sheet-spells .sheet-col0 { width: calc(100% - 700px); }
 .sheet-spells .sheet-col0 input { text-align:left; }
-
 .sheet-spells .sheet-col1 { width: 25px; }
-
 .sheet-spells .sheet-col1 input { text-align:left; }
-
 .sheet-spells .sheet-col2 { width: 40px; }
+.sheet-spells .sheet-col3 { width: 45px; }
+.sheet-spells .sheet-col4 { width: 30px; }
+.sheet-spells .sheet-col5 { width: 30px; }
+.sheet-spells .sheet-col6 { width: 75px; }
+.sheet-spells .sheet-col7 { width: 80px; }
+.sheet-spells .sheet-col8 { width: 70px; }
+.sheet-spells .sheet-col9 { width: 115px; }
+.sheet-spells .sheet-col10 { width: 85px; }
+.sheet-spells .sheet-col11 { width: 65px; }
+.sheet-spells .sheet-col12 { width: 40px; }
 
-.sheet-spells .sheet-col3 { width: 50px; }
+.sheet-spells .sheet-row-stats .sheet-col0 { margin-left: 44px; width: calc(100% - 748px); }
 
-.sheet-spells .sheet-col4 { width: 40px; }
+.sheet-spells .sheet-row-college .sheet-col0 { width: 75px; Text-align:right; font-size: 9px; height: 11px;}
+.sheet-spells .sheet-row-college .sheet-col1 { width: 150px; }
+.sheet-spells .sheet-row-college .sheet-col1 input { text-align:left; font-size: 9px; height: 11px;}
+.sheet-spells .sheet-row-college .sheet-col2 { width: 175px; Text-align:right; font-size: 9px; height: 11px;}
+.sheet-spells .sheet-row-college .sheet-col3 { width: 200px; }
+.sheet-spells .sheet-row-college .sheet-col3 input { text-align:left; font-size: 9px; height: 11px;}
 
-.sheet-spells .sheet-col5 { width: 60px; }
-
-.sheet-spells .sheet-col6 { width: 60px; }
-
-.sheet-spells .sheet-col7 { width: 60px; }
-
-.sheet-spells .sheet-col8 { width: 60px; }
-
-.sheet-spells .sheet-col9 { width: 40px; }
-
-.sheet-spells .sheet-margin-right {
-    margin-right: 15px;
-}
-
-.sheet-spells .sheet-row-stats .sheet-col0 { margin-left: 44px; width: calc(100% - 523px); }
+.sheet-spells .sheet-row-college .sheet-col0 { margin-left: 44px; width: calc(100% - 703px); }
 
 /* -- if edit mode, hide toggle notes -- */
 .sheet-spells .repcontainer.ui-sortable.editmode .sheet-checkbox,
