Forbidden Lands v1.4 update
- added a descriptive note to Consumable rolls as a reminder that you must manually adjust the consumable die on the sheet if you roll a Bane.
- small adjustments to roll template header and footer

--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -2041,15 +2041,14 @@ input[type="checkbox"].sheet-legendary:checked + span::before {
   background-color: #f1f1f1;
   border-radius: 5px;
   width: 240px;
-  padding: 5px;
+  padding: 5px 0 5px 0;
   box-sizing: border-box;
-  overflow: hidden;
   border: 5px solid #000;
   border-image-slice: 74;
   border-image-width: 50px 80px 50px 80px;
-  border-image-outset: 4 4 3 4;
+  border-image-outset: 6 4 4 4;
   border-image-repeat: repeat;
-  margin-left: -20px;
+  margin: 5px 0 5px -20px;
   border-image-source: url(http://imgsrv.roll20.net/?src=imgsrv.roll20.net/%3Fsrc%3Dimgsrv.roll20.net/%253Fsrc%253Dimgsrv.roll20.net/%25253Fsrc%25253Di.imgur.com/XuBOFJI.png);
 }
 
@@ -2062,8 +2061,12 @@ input[type="checkbox"].sheet-legendary:checked + span::before {
   color: #FFF;
   display: flex;
   justify-content: space-between;
-  padding: 2px 5px 2px 5px;
-  margin: 2px -5px 2px -5px;
+  padding: 3px 5px 3px 5px;
+  margin: 2px -9px 2px -9px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-left-radius: 9px;
+  border-bottom-right-radius: 9px;
 }
 
 .sheet-rolltemplate-forbiddenlands .sheet-template-header a {
@@ -2072,6 +2075,7 @@ input[type="checkbox"].sheet-legendary:checked + span::before {
 
 .sheet-rolltemplate-forbiddenlands .sheet-template-span-left.sheet-template-header {
   width: 43%;
+  justify-content: center;
 }
 
 .sheet-rolltemplate-forbiddenlands .sheet-template-span-center.sheet-template-header {
@@ -2080,12 +2084,10 @@ input[type="checkbox"].sheet-legendary:checked + span::before {
 
 .sheet-rolltemplate-forbiddenlands .sheet-template-span-right.sheet-template-header {
   width: 43%;
-  text-align: right;
-  display: block;
+  justify-content: center;
 }
 
-.sheet-rolltemplate-forbiddenlands div.sheet-template-subtitle,
-.sheet-rolltemplate-forbiddenlands div.sheet-template-footer {
+.sheet-rolltemplate-forbiddenlands div.sheet-template-subtitle {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   font-size: 1em;
   display: flex;
@@ -2093,6 +2095,14 @@ input[type="checkbox"].sheet-legendary:checked + span::before {
   justify-content: center;
   padding: 2px;
   margin: 0 -5px 5px -5px;
+}
+
+.sheet-rolltemplate-forbiddenlands div.sheet-template-footer {
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+  font-size: .75em;
+  margin: 5px;
+  text-align: justify;
+  padding: 2px;
 }
 
 .sheet-rolltemplate-forbiddenlands div.sheet-template-subtitle {
@@ -2115,7 +2125,7 @@ input[type="checkbox"].sheet-legendary:checked + span::before {
   grid-gap: 1px;
   background-color: transparent;
   padding: 0;
-  margin: 10px 2px 2px 2px;
+  margin: 3px 2px 2px 2px;
   grid-template-columns: repeat(6, 1fr);
 }
 
