Add image from Imgur for coc_7th_ed.css
It's more simple

--- a/Call_of_Cthulhu_7th_Ed_French/coc_7th_ed.css
+++ b/Call_of_Cthulhu_7th_Ed_French/coc_7th_ed.css
@@ -1,5 +1,5 @@
 .charsheet {
-    background-image: url('https://github.com/Roll20/roll20-character-sheets/tree/master/Call_of_Cthulhu_7th_Ed_French/background.jpg');
+    background-image: url('https://i.imgur.com/CTjmbXa.jpg');
     border: 2px solid black;
     width: 850px;
     font-family:'Arial';
