--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -578,14 +578,12 @@ input.sheet-expand:checked ~ .sheet-input-textarea {
 .sheet-character-consumables {
   grid-row-start: 7;
   grid-column-start: 1;
-  background-image: url(https://s3.amazonaws.com/files.d20.io/images/77923969/rCsuF5JKiAG1oJwXLYGB7Q/max.jpg);
+  background-image: url(https://s3.amazonaws.com/files.d20.io/images/85957506/mls4s4uSn2lRIWRXtAErNQ/max.jpg);
   overflow: hidden;
+  background-position-x: 3px;
+  background-position-y: 10px;
+  background-size: 95%;
   margin: -1px 0 0 0;
-
-/*  black version
-  background-image: url(https://s3.amazonaws.com/files.d20.io/images/77920570/BbWQkoopzZfCFHSHxCurHw/max.jpg);
-*/
-
   background-repeat: no-repeat;
 }
 
@@ -2251,6 +2249,22 @@ input[type="checkbox"].sheet-legendary:checked + span::before {
 
 .sheet-rolltemplate-forbiddenlands .sheet-template-smaller {
     font-size: 0.75em;
+}
+/* add drop shadow to dice */
+.sheet-rolltemplate-forbiddenlands .sheet-template-white-dice, 
+.sheet-rolltemplate-forbiddenlands .sheet-template-maroon-dice, 
+.sheet-rolltemplate-forbiddenlands .sheet-template-black-dice,
+.sheet-rolltemplate-forbiddenlands .sheet-template-green-dice,
+.sheet-rolltemplate-forbiddenlands .sheet-template-blue-dice,
+.sheet-rolltemplate-forbiddenlands .sheet-template-orange-dice,
+.sheet-rolltemplate-forbiddenlands .sheet-template-purple-dice {
+  box-shadow: -3px 2px 3px #000;
+  margin: 1px;
+}
+
+.sheet-rolltemplate-forbiddenlands .sheet-template-grid-item.sheet-template-span-six.sheet-template-header {
+  box-shadow: 0px 2px 7px #000;
+  margin-bottom: 5px;
 }
 
 .sheet-rolltemplate-forbiddenlands .sheet-template-white-dice {
