--- a/Cyberpunk2k20_v2/Cyberpunk2k20.css
+++ b/Cyberpunk2k20_v2/Cyberpunk2k20.css
@@ -1,3 +1,9 @@
+.sheet-rigide {
+    position: relative;
+    top: -10px;
+    left: 17px;
+}
+
 .sheet-body {
     font-family: arial;
     font-size: small;
@@ -6,6 +12,21 @@
     background:white;
     /*background-image: linear-gradient(to right, white 20%, #C6D3E8 , white);*/
 }
+
+.sheet-health{
+    display:inline-block;
+    margin-left:10px;
+    text-align:center;
+
+}
+.sheet-dmg-calculator{
+    display: inline-block;
+    position: absolute;
+    top:85px;
+    width: 340px;
+    border-bottom: 3px solid red !important;
+}
+
 hr {
     background-color: #E82C0C;
     border: 0 none;
@@ -33,7 +54,7 @@ b {
 
 }
 .sheet-stats{
-    width: 410px;
+    width: 450px;
 }
 .sheet-select-dmg-dice{
     width: 50px;
@@ -55,6 +76,13 @@ span[name="attr_cybDesc"],
 .sheet-wp-stat span {
     font-size:x-small;
 }
+.sheet-secondary-attrs{
+    width:435px;
+}
+.sheet-secondary-attrs>b{
+    display:inline-block !important;
+    min-width:auto !important;
+}
 .sheet-body,
 .sheet-secondary-attrs,
 .sheet-secondary-attrs>b>span{
@@ -65,7 +93,10 @@ span[name="attr_cybDesc"],
     width: 60px;
 }
 
-
+span[name="attr_cybDesc"], .sheet-life span {
+    color:#E82C0C;
+    font-size:smaller;
+}
 
 .sheet-life,
 .sheet-weapons,
@@ -91,6 +122,17 @@ textarea {
     font-size: 11px;
 }
 .sheet-edit-life-event:checked ~ li>span {display: none;}
+.sheet-edit-life-event:not(checked) ~ li>.sheet-life-events {
+    display:block;
+    /*pointer-events: none;*/
+    border:none;
+    color:#484848;
+    text-align:justify;
+}
+.sheet-edit-life-event:checked ~ li>.sheet-life-events {
+    /*pointer-events: auto;*/
+    border:1px solid #E82C0C;
+}
 
 .sheet-edit-life-event,.sheet-edit-wp {
     position: relative;
@@ -102,7 +144,7 @@ textarea {
     float:right;
 }
 .sheet-life li {
-    width:340px;
+    width:100%;
 }
 
 
@@ -142,7 +184,8 @@ button[name="roll_emp"]{
     color:black;
     width: 45px;
     text-align: right; !important;
-    line-height: unset; !important
+    /*line-height: unset; */
+    margin-top:-1px;
 }
 .sheet-stats>.sheet-skill-button {
     width: auto;
@@ -211,9 +254,12 @@ button[name="roll_emp"]{
     /*net*/
 .sheet-net>.sheet-deck-bloc>b {
     display: inline-block;
-    margin-top:-1px;
+    margin-top:0px;
 }
 
+.sheet-panel{
+    width:100%;
+}
 
 li>input,
 li>select,
@@ -263,7 +309,7 @@ li>select,
 
 
 .sheet-edit-view:not(checked) ~ .sheet-skills-attr {
-    width:342px;
+    width:400px;
 }
 
 
@@ -281,7 +327,7 @@ li>select,
     display: block;
     margin:-1px 0 0 40px;
     /*width:317px;*/
-    width:358px;
+    width:400px;
     border-top:1px solid #C6D3E8;
     max-height:300px;
     overflow:auto;
@@ -366,8 +412,8 @@ button[type="roll"]:before {
 button[type="roll"] {
     border:none;
     background: transparent;
-    margin:0;
-    padding: 0;
+    margin:0 !important;
+    padding: 0 !important;
     font-weight: normal !important;
     cursor: pointer;
     padding:0;
@@ -460,13 +506,15 @@ input[type="number"]{
     background: white !important;
 }
 
-
+input[name="attr_armor_auto_enc"]:after,
 input[name="attr_armor_macro"]:after{
     content: 'Q';
     font-family:'pictos';
     font-size:16px;
     background: white !important;
 }
+
+input[name="attr_armor_auto_enc"]:checked:after,
 input[name="attr_armor_macro"]:checked:after{
     color:green;
 }
@@ -542,7 +590,11 @@ input[name="attr_wp-melee"]:before{
 .sheet-armors input[type="number"], .sheet-armors input[placeholder="enc"] {
     width: 40px !important;
 }
-input[name="attr_armor_macro"] {margin-left:10px;margin-top:-3px;}
+
+input[name="attr_armor_auto_enc"],
+input[name="attr_armor_macro"] {
+    margin-left:10px;margin-top:-3px;
+}
 
 textarea[name="attr_cybDesc"]{
     width:266px;
@@ -623,15 +675,19 @@ input[name="attr_view-txt"]:checked:after,
     background-color:#3c4e72;
     padding:2px;
     color:white;
-    width:100%;
+    width:235px;
 }
 .sheet-rolltemplate-skill td,
 .sheet-rolltemplate-save td,
 .sheet-rolltemplate-dmg td,
 .sheet-rolltemplate-prog td {
     padding:2px;
-    width:100%;
-    white-space: nowrap;
+    text-align:justify;
+}
+
+.sheet-rolltemplate-calculDamages {
+    background-color:white;
+    border:1px solid #3c4e72;
 }
 
 /*TODO*/
