--- a/Stars_Without_Number_Revised/Source/pug/character.pug
+++ b/Stars_Without_Number_Revised/Source/pug/character.pug
@@ -467,7 +467,7 @@ input(type="hidden", name="attr_magic_type", value="arcanist").magic-type
 						+text-input("magic_committed_effort_current", "CURRENT")(type="number", value="0", min="0").center
 						+text-input("magic_committed_effort_scene", "SCENE")(type="number", value="0", min="0").center
 						+text-input("magic_committed_effort_day", "DAY")(type="number", value="0", min="0").center
-						+text-input("magic_uncommitted_effort", "UNCOMMITTED")(type="number", value="1", readonly, data-i18n-title="MAXIMUM_EFFORT_DESC").center
+						+text-input("magic_uncommitted_effort", "UNCOMMITTED")(type="number", value="1", readonly).center
 					.spells.grey-box.simple-repsection
 						.flex-center
 							h3(data-i18n="ABILITIES")
