--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -136,6 +136,32 @@ div.sheet-column-header {
   text-align: center;
 }
 
+/* TABNS */
+div.sheet-grid-tabs {
+  display              : grid;
+  grid-template-columns: 1fr 1fr 1fr 20fr;
+  grid-gap             : 1%;
+}
+
+div.sheet-grid-tabs button {
+  height: 2em;
+}
+
+div.sheet-grid-tabs button[title="Character"] {
+  grid-column: 1;
+}
+
+div.sheet-grid-tabs button[title="Ark"] {
+  grid-column: 2;
+}
+
+div.sheet-grid-tabs button[title="Log"] {
+  grid-column: 3;
+}
+
+div.sheet-grid-tabs img[alt="Mutant Year Zero"] {
+  grid-column: 4;
+}
 
 /* Hide actual radio */
 input.sheet-skull[type="radio"] {
@@ -226,7 +252,6 @@ input[type="checkbox"].sheet-xbox:not(:checked) + span::before {
 }
 
 
-
 /* repcontrol */
 
 /* this sets the formatting for all repcontrol buttons */
@@ -239,16 +264,20 @@ input[type="checkbox"].sheet-xbox:not(:checked) + span::before {
 .repcontrol_edit,
 .repcontrol_del {
   box-shadow: none;
-  height: 1.2em;
-  width: 3.25em;
-  padding: 0 1px 3px 1px;
-  margin: 1px;
+  height    : 1.2em;
+  margin    : 1px;
+  padding   : 0 1px 3px 1px;
+  width     : 3.25em;
 }
 
 .repcontrol_move {
   cursor: move;
   float: right;
   margin-right: 5px;
+}
+
+div.sheet-repeating-relationships .itemcontrol .repcontrol_del {
+  margin-right: 6%;
 }
 
 /* Sheet Tabs */
@@ -540,29 +569,21 @@ div.sheet-character-relationships {
 
 div.sheet-character-notes {
   grid-row: 8;
-  grid-column: 1/3;
+  grid-column: 1 / 3;
 }
 
 /* ---------------------------------- Attributes */
 div.sheet-attributes-grid {
   grid-template-columns: 3fr 0.5fr 1.5fr 7fr;
-  grid-template-rows: auto repeat(4, 3em);
 }
 
-
-div.sheet-attributes-box-header {
-   grid-column   : 1 / 5;
-   grid-row-start: 1;
-}
-
-div.sheet-attributes-grid h2,
+div.sheet-attributes-grid h3,
 div.sheet-character-appearance h2 {
   font-size  : 1.2em;
   text-shadow: 0px 1px 1em #fff;
 }
 
-div.sheet-attributes-grid h3 {
-  font-size  : 1.2em;
+div.sheet-wounds-grid h3 {
   font-style : italic;
   grid-column: 1;
   grid-row   : 1;
@@ -574,29 +595,46 @@ div.sheet-attributes-grid hr {
   grid-column: 1 / 5;
 }
 
+div.sheet-attributes-grid.sheet-header h1 {
+  grid-column: 1 / 6;
+  grid-row   : 1;
+  text-align : center;
+}
+
+div.sheet-attributes-grid.sheet-header h2 {
+  grid-row   : 1;
+  padding-top: 2em;
+  text-align : center;
+}
+
+div.sheet-attributes-grid.sheet-header h2:nth-of-type(1),
+div.sheet-attributes-grid.sheet-header h2:nth-of-type(2)  {
+  margin-left: 42%;
+}
+
 div.sheet-attributes-grid h2[data-i18n="strength"],
 div.sheet-attributes-grid input[name="attr_strength_max"],
 div.sheet-attributes-grid input[name="attr_strength"] {
-   grid-row-start: 2;
+   grid-row: 1;
 }
 
 div.sheet-attributes-grid h2[data-i18n="agility"],
 div.sheet-attributes-grid input[name="attr_agility_max"],
 div.sheet-attributes-grid input[name="agility"] {
-   grid-row-start: 3;
+   grid-row: 2;
 }
 
 div.sheet-attributes-grid h2[data-i18n="wits"],
 div.sheet-attributes-grid input[name="attr_wits_max"],
 div.sheet-attributes-grid input[name="wits"] {
-   grid-row-start: 4;
+   grid-row: 3;
 }
 
 div.sheet-attributes-grid h2[data-i18n="empathy"],
 div.sheet-attributes-grid input[name="attr_empathy_max"],
 div.sheet-attributes-grid input[name="empathy"],
 div.sheet-attributes-grid input[name="attr_doubt"] {
-   grid-row-start: 5;
+   grid-row: 4;
 } 
 
 div.sheet-attributes-grid h2[data-i18n="strength"],
@@ -606,6 +644,7 @@ div.sheet-attributes-grid h2[data-i18n="empathy"] {
   grid-column: 1;
 }
 
+div.sheet-attributes-grid.sheet-header h2:nth-of-type(1),
 div.sheet-attributes-grid input[name="attr_strength_max"],
 div.sheet-attributes-grid input[name="attr_agility_max"],
 div.sheet-attributes-grid input[name="attr_wits_max"],
@@ -613,12 +652,18 @@ div.sheet-attributes-grid input[name="attr_empathy_max"] {
   grid-column: 2;
 }
 
+div.sheet-attributes-grid.sheet-header h2:nth-of-type(2),
 div.sheet-attributes-grid input[name="attr_strength"],
 div.sheet-attributes-grid input[name="attr_agility"],
 div.sheet-attributes-grid input[name="attr_wits"],
 div.sheet-attributes-grid input[name="attr_empathy"] {
   grid-column: 3;
 }
+
+div.sheet-attributes-grid.sheet-header h2:nth-of-type(3) {
+  grid-column: 4;
+}
+
 
 div.sheet-attributes-grid input[type="number"],
 div.sheet-attributes-grid input[type="text"] {
@@ -720,7 +765,7 @@ div.sheet-appearance-grid button[name="act_settings_clothing"] + h2 {
 
 /* ---------------------------------- Critical Injuries */
 div.sheet-box.sheet-character-injuries {
-  min-height: 15.9em;
+  min-height: 16.3em;
 }
 
 div.sheet-injuries-grid {
@@ -1050,6 +1095,7 @@ div.sheet-skills-grid h2:nth-of-type(3) {
 
 div.sheet-skills-grid button {
   grid-column: 1;
+  height: 1.5em;
 }
 
 div.sheet-skills-grid input[type="number"] {
@@ -1823,6 +1869,7 @@ div.sheet-ark-other-grid input[name="attr_ark_season"] {
 
 div.sheet-ark-other-grid input[name="attr_ark_population"] {
   grid-column: 3 / 5;
+  width: 100%;
 }
 
 div.sheet-ark-other-grid input[name="attr_ark_water_source"],
@@ -1931,21 +1978,26 @@ div.sheet-weapons-box .repcontainer .repitem {
   text-align: center;
 }
 
+div.sheet-init-item {
+  grid-column: 2;
+  margin-top: 10%;
+}
+
 .sheet-sub-grid-item {
   text-align: center;
   margin: 2px;
 }
 
 .sheet-span-two {
-  grid-column: 1/3;
+  grid-column: 1 / ;
 }
 
 .sheet-span-three {
-  grid-column: 1/4;
+  grid-column: 1 / 4;
 }
 
 .sheet-span-right {
-  grid-column: 2/4;
+  grid-column: 2 / 4;
 }
 
 /**** DICE ROLLER STYLING ****/
@@ -2384,6 +2436,12 @@ div.sheet-dots input[type="radio"]:checked ~ input[type="radio"] + span {
    color           : #2d281d;
 }
 
+/*
+div.sheet-rot-grid div.sheet-dots input[name="attr_rot_permenant"][value="0"] ~ span {
+  color: #fff;
+}
+*/
+
 div.sheet-rot-grid input[type="number"].sheet-input-number {
   width: 4em;
 }
@@ -2446,7 +2504,7 @@ div.sheet-rot-grid label[title="permaneant rot"] > span {
   }
 
 /* Add Backgrounds to Headers */
-div.sheet-attributes-box-header {
+div.sheet-attributes-grid.sheet-header {
   background-size: cover;
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header.jpg");
 }
